<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="192dp"
            android:layout_marginTop="244dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/priceclick"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/Petrolprice"
                        android:layout_width="96dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="41dp"
                        android:layout_marginTop="92dp"
                        android:layout_marginEnd="39dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/current_price"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <ImageButton
                        android:id="@+id/imageprice"
                        android:layout_width="78dp"
                        android:layout_height="73dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="47dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="51dp"
                        android:layout_marginBottom="69dp"
                        android:background="@drawable/round"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/price"
                        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/contactusclick"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/Contactus"
                        android:layout_width="78dp"
                        android:layout_height="25dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="47dp"
                        android:layout_marginTop="91dp"
                        android:layout_marginEnd="51dp"
                        android:layout_marginBottom="14dp"
                        android:text="@string/contact_us"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <ImageButton
                        android:id="@+id/imagecontactus"
                        android:layout_width="73dp"
                        android:layout_height="69dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="55dp"
                        android:layout_marginBottom="73dp"
                        android:background="@drawable/round"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/contact"
                        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/petrol"
            android:layout_width="150dp"
            android:layout_height="81dp"
            android:text="PetroFuel"
            android:textColor="@color/colorYellow"

            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.263"
            app:layout_editor_absoluteY="56dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Mileage"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:text="Happy Journey"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/petrol"
            app:layout_constraintVertical_bias="0.181"
            app:layout_editor_absoluteY="56dp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="197dp"
            android:layout_height="171dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.925"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="179dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/petrolclick"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imagepetrol"
                        android:layout_width="90dp"
                        android:layout_height="73dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="43dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="43dp"
                        android:layout_marginBottom="56dp"
                        android:background="@drawable/round"
                        android:contentDescription="TODO"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/petrol"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/PetrolCalculate"
                        android:layout_width="78dp"
                        android:layout_height="25dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="47dp"
                        android:layout_marginTop="91dp"
                        android:layout_marginEnd="51dp"
                        android:layout_marginBottom="14dp"
                        android:text="petrol"
                        android:textAlignment="center"
                        android:textSize="20sp" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/Mileageclick"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/MileageCalculate"
                        android:layout_width="101dp"
                        android:layout_height="33dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="37dp"
                        android:layout_marginTop="91dp"
                        android:layout_marginEnd="37dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/mileage"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/imagemilaege"
                        android:layout_width="74dp"
                        android:layout_height="73dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="51dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="51dp"
                        android:layout_marginBottom="56dp"
                        android:background="@drawable/round"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/mymileage"
                        tools:ignore="SpeakableTextPresentCheck" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="BottomAppBar" />

        <TextView
            android:id="@+id/mileage"
            android:layout_width="361dp"
            android:layout_height="30dp"
            android:text="@string/copyright_all_rights_are_reserved_by_dash_pro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bottomAppBar"
            app:layout_editor_absoluteY="56dp"
            tools:ignore="MissingConstraints" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>